--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,11 @@
         <version>2.8.0</version>
     </dependency>
     <dependency>
+    	<groupId>org.bytedeco</groupId>
+   		<artifactId>javacv-platform</artifactId>
+    	<version>1.3.3</version>
+ 	</dependency>
+    <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>1.1.3</version>
