--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,12 @@
 	    <version>1.5.0</version>
 	</dependency>
 
+	<!-- https://mvnrepository.com/artifact/nu.pattern/opencv -->
+	<dependency>
+	    <groupId>nu.pattern</groupId>
+	    <artifactId>opencv</artifactId>
+	    <version>2.4.9-7</version>
+	</dependency>
 
   </dependencies>
   <properties>
